T4/ej2/t4-letschat.yaml
apiVersion: v1
kind: Service
metadata:
  name: lets-chat
spec:
  type: NodePort
  selector:
    app: lets-chat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
